@@ -1,0 +1,160 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.1" language="de">
+<context>
+    <name>Alfen</name>
+    <message>
+        <location filename="../plugininfo.h" line="49"/>
+        <source>Active Power</source>
+        <extracomment>The name of the StateType ({dff81182-0958-41fa-94e8-c5f6ee1285a1}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Aktuelle Leistung</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="52"/>
+        <location filename="../plugininfo.h" line="55"/>
+        <source>Alfen</source>
+        <extracomment>The name of the vendor ({bc9d8661-7984-4076-953c-a226eb591845})
+----------
+The name of the plugin Alfen ({d82e88e7-1cde-477e-93f1-1b2b4e98d7aa})</extracomment>
+        <translation>Alfen</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="58"/>
+        <source>Alfen Eve Single Pro-Line</source>
+        <extracomment>The name of the ThingClass ({f5eef340-6747-4985-8c50-dc715f11db45})</extracomment>
+        <translation>Alfen Eve Single Pro-Line</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="61"/>
+        <location filename="../plugininfo.h" line="64"/>
+        <source>Charging enabled</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, ActionType: power, ID: {427fcf58-b5dc-4590-b6c6-edabb20271b6})
+----------
+The name of the StateType ({427fcf58-b5dc-4590-b6c6-edabb20271b6}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Ladevorgang aktiviert</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="67"/>
+        <source>Connected</source>
+        <extracomment>The name of the StateType ({3bf008cc-ba2f-4bc0-8075-9ecd7f832b29}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Verbunden</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="70"/>
+        <source>Current L1</source>
+        <extracomment>The name of the StateType ({d418be72-18cc-445e-9fdb-083bcbd3e8ea}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Strom L1</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="73"/>
+        <source>Current L2</source>
+        <extracomment>The name of the StateType ({d83c2a71-760c-4d93-bee0-1786b13553c2}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Strom L2</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="76"/>
+        <source>Current L3</source>
+        <extracomment>The name of the StateType ({9148c650-2eb9-4934-92e1-890bc9692902}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Strom L3</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="79"/>
+        <source>EVSE available</source>
+        <extracomment>The name of the StateType ({087f90ff-8d42-45ab-91b1-61a55c1f3bb4}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>EVSE verfügbar</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="82"/>
+        <source>MAC address</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, Type: thing, ID: {0b464569-2e44-46dd-a034-efca06c165a2})</extracomment>
+        <translation>MAC Adresse</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="85"/>
+        <location filename="../plugininfo.h" line="88"/>
+        <source>Maximal charging current</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, ActionType: maxChargingCurrent, ID: {80dfa465-6dd0-4359-9c53-4e0d0791ea9b})
+----------
+The name of the StateType ({80dfa465-6dd0-4359-9c53-4e0d0791ea9b}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Maximaler Ladestrom</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="91"/>
+        <source>Maximum charge current</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, Type: thing, ID: {56f9d8a4-b29b-445d-99c4-b67ba202d8f1})</extracomment>
+        <translation>Maximaler Ladestrom</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="94"/>
+        <source>Minimum charge current</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, Type: thing, ID: {37524f63-8978-4915-9981-949aba468457})</extracomment>
+        <translation>Minimaler Ladestrom</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="97"/>
+        <source>Modbus slave ID</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, Type: thing, ID: {e4fb5320-b845-42bf-b338-be2e6a573864})</extracomment>
+        <translation>Modbus Adresse</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="100"/>
+        <source>Phase count</source>
+        <extracomment>The name of the StateType ({7bace022-4f1e-45d7-a2af-83f37e9659d0}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Phasenanzahl</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="103"/>
+        <source>Plugged in</source>
+        <extracomment>The name of the StateType ({73b86e88-6700-476e-859a-e7942a049907}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Eingesteckt</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="106"/>
+        <source>Port</source>
+        <extracomment>The name of the ParamType (ThingClass: alfenEveSinglePro, Type: thing, ID: {e3cf4289-0b9b-4ab9-a3e2-024ea504e6c4})</extracomment>
+        <translation>Port</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="109"/>
+        <source>Set charging enabled</source>
+        <extracomment>The name of the ActionType ({427fcf58-b5dc-4590-b6c6-edabb20271b6}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Ladevorgang aktiviert</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="112"/>
+        <source>Set maximal charging current</source>
+        <extracomment>The name of the ActionType ({80dfa465-6dd0-4359-9c53-4e0d0791ea9b}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Maximaler Ladestrom</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="115"/>
+        <source>State (61851)</source>
+        <extracomment>The name of the StateType ({a661f15f-5b4f-4a40-8042-2808c67e80d6}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Status (61851)</translation>
+    </message>
+    <message>
+        <location filename="../plugininfo.h" line="118"/>
+        <source>Total consumed energy</source>
+        <extracomment>The name of the StateType ({f4e186c7-f048-4e2f-9e46-714af3b31e28}) of ThingClass alfenEveSinglePro</extracomment>
+        <translation>Gesamt geladene Energie</translation>
+    </message>
+</context>
+<context>
+    <name>IntegrationPluginAlfen</name>
+    <message>
+        <location filename="../integrationpluginalfen.cpp" line="54"/>
+        <source>The discovery is not available. Please enter the IP address manually.</source>
+        <translation>Die Netzwerkerkennung ist nicht verfügbar. Bitte geben sie die IP Adresse manuell ein.</translation>
+    </message>
+    <message>
+        <location filename="../integrationpluginalfen.cpp" line="110"/>
+        <source>The given MAC address is not valid.</source>
+        <translation>Die gegebene MAC Adresse ist nicht valide.</translation>
+    </message>
+    <message>
+        <location filename="../integrationpluginalfen.cpp" line="147"/>
+        <source>Could not initialize the communication with the wallbox.</source>
+        <translation>Die Verbindung mit der Wallbox konnte nicht aufgebaut werden.</translation>
+    </message>
+</context>
+</TS>
