@@ -362,3 +362,12 @@ Depends: ${shlibs:Depends},
 Description: nymea integration plugin for Device dvModbusIR read-out adapters
  This package contains the nymea integration plugin for read-out adapters made
  by Device GmbH.
+
+Package: nymea-plugin-alfen
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+Description: nymea integration plugin for Alfen Eve Single Pro-Line wallbox.
+ This package contains the nymea integration plugin for wallboxes made
+ by Alfen N.V.
