@@ -1,3 +1,9 @@
+nymea-plugins-modbus (1.7.007) buster focal jammy; urgency=medium
+
+* Added plugin for alven eve single pro-line
+
+ -- Luis Reber <l.reber@consolinno.de> Fri, 26 Apr 2024 09:50:00 +0200
+
 nymea-plugins-modbus (1.7.006) buster focal jammy; urgency=medium
 
 * Kaco SunSpec: set inverter power state to 0 when not connected.
